tests/snapshots/presenter__presenter_search_highlight.snap
---
source: tests/presenter.rs
expression: "render(&search_state(), 100, 24)"
---
"┌r─────────────────────────────────────┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src                               ││fn main() {                                               │"
"│M   main.rs                           ││    println!;                                             │"
"│    ▾ inner                           ││}                                                         │"
"│A     added.rs                        ││                                                          │"
"│  README.md                           ││                                                          │"
"│D gone.txt                            ││                                                          │"
"│? scratch.log                         ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└Source──────────────────────────────────────────────? help┘"
